--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11"
   },
